Bug 1978145 - Use a .dynamic-toolbar-enabled class instead of .style.visibility. r=devtools-reviewers,nchevobbe
Just feels a bit cleaner and is more consistent with the .dynamic-toolbar-on-top
class which I'll be adding in a future patch.

Differential Revision: https://phabricator.services.mozilla.com/D294779

UltraBlame original commit: 7b0cb42dc96270346b6f4c92ee8e96415280fcac

--- a/devtools/client/responsive/responsive-browser.css
+++ b/devtools/client/responsive/responsive-browser.css
@@ -80,6 +80,10 @@
   opacity: 0.5;
 }
 
+.rdm-dynamic-toolbar:not(.dynamic-toolbar-enabled) {
+  display: none;
+}
+
 .browserContainer.responsive-mode > .browserStack > :is(browser, .rdm-screen-box) {
   grid-column: center-align;
   grid-row: margin-top-offset;
